automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 <html>
   <head>
     <title>Icebreakers</title>
+    <style>
+    h1 {
+      font-size: 20px;
+      font-weight: 2px;
+      font-family: fantasy;
+      color: #ffc300;
+      text-decoration: overline;
+    }
+
+    h3 {
+      font-size: 18px;
+      font-weight: 2px;
+      font-family: fantasy;
+      color: #ffcc300;
+      text-decoration: underline;
+    }
+    </style>
   </head>
 
   <body>
