--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Icebreakers</title>
     <style>
     h1 {
-      font-size: 20px;
-      font-weight: 2px;
-      font-family: fantasy;
+      font-size: 60px;
+      font-weight: 300;
+      font-family: "Helvetica", "Arial", "sans-serif";
       color: #ffc300;
       text-decoration: overline;
     }
 
     h3 {
       font-size: 18px;
-      font-weight: 2px;
-      font-family: fantasy;
-      color: #ffcc300;
+      font-weight: 200;
+      font-family: Verdana;
+      color: #868e96;
       text-decoration: underline;
     }
     </style>
